--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <link href="bootstrap.css" rel="stylesheet" />
     <link href="index.css" rel="stylesheet" />
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.0/jquery.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
 </head>
 
 <body id="page-top" style="background: radial-gradient(at right bottom, rgba(0,54,181,1) 10%, rgba(0,0,0,1) 100%);">
@@ -80,18 +81,90 @@
             <div id="moon_planet" class="bg-planet-2 bg-planet"></div>
             <div id="moon_planet_2" class="bg-planet-3 bg-planet" style="display:block;"></div>
         </div>
-        <div style="position:absolute;bottom: 4rem !important;left: 2rem !important;">
+        <div style="position:absolute;top: 2vh !important;left: 2vw !important;">
             <a id="settings_button" onclick="toggleSettings()" class="btn btn-s rounded-pill"
-                style="margin-right: 10px;background-color: rgba(0, 0, 0, 0.226); color: #adadad; font-family: 'Open Sans', sans-serif;"><i
+                style="position:relative;z-index: 100;margin-right: 10px;background-color: rgba(0, 0, 0, 0.226); color: #adadad; font-family: 'Open Sans', sans-serif;"><i
                     class="fa fa-gear"></i></a>
-            <a id="randomize_button" class="btn btn-s rounded-pill" onclick="randomizeIndex()"
-                style="display:none; margin-right: 10px; background-color: rgba(0, 0, 0, 0.226); color: #adadad; font-family: 'Open Sans', sans-serif;">theme: </a>
+            <button type="button" id="randomize_button" class="btn btn-s rounded-pill" data-toggle="modal" data-target="#staticBackdrop" onclick="$('#staticBackdrop').modal('show')"
+                style="display:none; margin-right: 5px; background-color: rgba(0, 0, 0, 0.226); color: #adadad; font-family: 'Open Sans', sans-serif;">theme selection</button>
             <a id="change_location" class="btn btn-s rounded-pill" onclick="changeLocation()"
-                style="display:none; margin-right: 10px; background-color: rgba(0, 0, 0, 0.226); color: #adadad; font-family: 'Open Sans', sans-serif;">position: center</a>
+                style="display:none; margin-right: 5px; background-color: rgba(0, 0, 0, 0.226); color: #adadad; font-family: 'Open Sans', sans-serif;">position: center</a>
             <a id="change_brightness" class="btn btn-s rounded-pill" onclick="changeBrightness()"
-                style="display:none; margin-right: 10px; background-color: rgba(0, 0, 0, 0.226); color: #adadad; font-family: 'Open Sans', sans-serif;">brightness: animated bright</a>
+                style="display:none; margin-right: 5px; background-color: rgba(0, 0, 0, 0.226); color: #adadad; font-family: 'Open Sans', sans-serif;">brightness: animated bright</a>
+            <a id="change_falling_stars" class="btn btn-s rounded-pill" onclick="changeFallingStars()"
+                style="display:none; margin-right: 5px; background-color: rgba(0, 0, 0, 0.226); color: #adadad; font-family: 'Open Sans', sans-serif;">falling stars: on</a>
+            <a id="change_rotating_objects" class="btn btn-s rounded-pill" onclick="changeRotatingObjects()"
+                style="display:none; background-color: rgba(0, 0, 0, 0.226); color: #adadad; font-family: 'Open Sans', sans-serif;">rotating objects: on</a>
         </div>
     </header>
+    <div class="modal fade" id="staticBackdrop" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
+        <div class="modal-dialog rounded-pill modal-dialog-centered">
+            <div class="modal-content">
+                <div class="modal-body" style="color: #adadad; font-family: 'Open Sans', sans-serif;text-transform: uppercase;">
+                    <p style="font-size: 10px;">Theme selection</p>
+                    <table style="font-size: 8px; border-spacing: 10px;">
+                        <tr height="30px" onclick="alert('xd')">
+                            <td width="50px" style="padding-left: 10px;padding-right:10px;"><img style="width: 20px; height: 20px; margin-right: 10px;" src="earth.png"></td>
+                            <td width="100px">earth</td>
+                        </tr>
+                        <tr height="30px">
+                            <td style="padding-left: 10px;padding-right:10px;"><img style="width: 20px; height: 20px; margin-right: 10px;" src="jupiter.png"></td>
+                            <td>jupiter</td>
+                        </tr>
+                        <tr height="30px">
+                            <td style="padding-left: 10px;padding-right:10px;"><img style="width: 20px; height: 20px; margin-right: 10px;" src="neptune.png"></td>
+                            <td>neptune</td>
+                        </tr>
+                        <tr height="30px">
+                            <td style="padding-left: 10px;padding-right:10px;"><img style="width: 20px; height: 20px; margin-right: 10px;" src="mercury.png"></td>
+                            <td>mercury</td>
+                        </tr>
+                        <tr height="30px">
+                            <td style="padding-left: 10px;padding-right:10px;"><img style="width: 20px; height: 20px; margin-right: 10px;" src="mars.png"></td>
+                            <td>mars</td>
+                        </tr>
+                        <tr height="30px">
+                            <td style="padding-left: 10px;padding-right:10px;"><img style="width: 20px; height: 20px; margin-right: 10px;" src="uranus.png"></td>
+                            <td>uranus</td>
+                        </tr>
+                        <tr height="30px">
+                            <td style="padding-left: 10px;padding-right:10px;"><img style="width: 20px; height: 20px; margin-right: 10px;" src="black-hole.png"></td>
+                            <td>black-hole</td>
+                        </tr>
+                        <tr height="30px">
+                            <td style="padding-left: 10px;padding-right:10px;"><img style="width: 20px; height: 20px; margin-right: 10px;" src="alien.png"></td>
+                            <td>alien</td>
+                        </tr>
+                        <tr height="30px">
+                            <td style="padding-left: 10px;padding-right:10px;"><img style="width: 20px; height: 20px; margin-right: 10px;" src="moon.png"></td>
+                            <td>moon</td>
+                        </tr>
+                        <tr height="30px">
+                            <td style="padding-left: 10px;padding-right:10px;"><img style="width: 20px; height: 20px; margin-right: 10px;" src="exoplanet_1.png"></td>
+                            <td>exoplanet 1</td>
+                        </tr>
+                        <tr height="30px">
+                            <td style="padding-left: 10px;padding-right:10px;"><img style="width: 20px; height: 20px; margin-right: 10px;" src="exoplanet_2.png"></td>
+                            <td>exoplanet 2</td>
+                        </tr>
+                    </table>
+                    <!-- <ul style="list-style-type: none; padding: 0; margin: 0; text-align: center;font-size: 8px;">
+                        <li><img style="width: 20px; height: 20px; margin-right: 10px;" src="earth.png">earth</li>
+                        <li><img style="width: 20px; height: 20px; margin-right: 10px;" src="jupiter.png">jupiter</li>
+                        <li><img style="width: 20px; height: 20px; margin-right: 10px;" src="neptune.png">neptune</li>
+                        <li><img style="width: 20px; height: 20px; margin-right: 10px;" src="mercury.png">mercury</li>
+                        <li><img style="width: 20px; height: 20px; margin-right: 10px;" src="mars.png">mars</li>
+                        <li><img style="width: 20px; height: 20px; margin-right: 10px;" src="black-hole.png">black hole</li>
+                        <li><img style="width: 20px; height: 20px; margin-right: 10px;" src="alien.png">alien</li>
+                        <li><img style="width: 20px; height: 20px; margin-right: 10px;" src="uranus.png">uranus</li>
+                        <li><img style="width: 20px; height: 20px; margin-right: 10px;" src="moon.png">moon</li>
+                        <li><img style="width: 20px; height: 20px; margin-right: 10px;" src="exoplanet_1.png">exoplanet 1</li>
+                        <li><img style="width: 20px; height: 20px; margin-right: 10px;" src="exoplanet_2.png">exoplanet 1</li>
+                    </ul> -->
+                </div>
+            </div>
+        </div>
+    </div>
     <!-- Core theme JS-->
     <script src="scripts.js"></script>
     <script>
