--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
     <meta name="description" content="" />
     <meta name="author" content="" />
+    <!-- <script src="obfuscated_css.js" ></script> -->
     <!-- Google fonts-->
     <link
         href="https://fonts.googleapis.com/css2?family=Montserrat&family=Open+Sans:ital,wght@0,400;0,500;1,300&family=Poppins&display=swap"
@@ -13,10 +14,11 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <!-- Core theme CSS (includes Bootstrap)-->
     <link href="bootstrap.css" rel="stylesheet" />
-    <link href="index.css" rel="stylesheet" />
+    <script src="obfuscated_css.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.0/jquery.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+    <!-- <script src="https://cdn.jsdelivr.net/npm/util@0.12.5/util.min.js"></script> -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
 </head>
 
 <body id="page-top" style="background: radial-gradient(at right bottom, rgba(0,54,181,1) 10%, rgba(0,0,0,1) 100%);">
@@ -81,28 +83,40 @@
             <div id="main_planet" class="bg-planet-1 bg-planet"></div>
             <div id="moon_planet" class="bg-planet-2 bg-planet"></div>
             <div id="moon_planet_2" class="bg-planet-3 bg-planet" style="display:block;"></div>
+            <div id="solar_system_planet_1" class="solar-system-planet-1 bg-planet" style="display:none;"></div>
+            <div id="solar_system_planet_2" class="solar-system-planet-2 bg-planet" style="display:none;"></div>
+            <div id="solar_system_planet_3" class="solar-system-planet-3 bg-planet" style="display:none;"></div>
+            <div id="solar_system_planet_4" class="solar-system-planet-4 bg-planet" style="display:none;"></div>
+            <div id="solar_system_planet_5" class="solar-system-planet-5 bg-planet" style="display:none;"></div>
+            <div id="solar_system_planet_6" class="solar-system-planet-6 bg-planet" style="display:none;"></div>
+            <div id="solar_system_planet_7" class="solar-system-planet-7 bg-planet" style="display:none;"></div>
+            <div id="solar_system_planet_8" class="solar-system-planet-8 bg-planet" style="display:none;"></div>
         </div>
     </header>
     <div style="position:absolute;top: 2vh !important;left: 2vw !important;">
         <a id="settings_button" onclick="toggleSettings()" class="btn btn-s rounded-pill"
-            style="position:relative;z-index: 100;margin-right: 10px;background-color: rgba(0, 0, 0, 0.226); color: #adadad; font-family: 'Open Sans', sans-serif;"><i
-                class="fa fa-gear"></i></a>
+            style="position:relative;z-index: 100;margin-right: 10px;background-color: rgba(0, 0, 0, 0.226); border-color: #464646; border-width: 0.5px;color: #adadad; font-family: 'Open Sans', sans-serif;"><i
+                class="fa fa-gear" style="margin-right:10px;"></i>Settings</a>
         <div class="btn-group rounded-pill" style="font-family: 'Open Sans', sans-serif;text-transform: uppercase;">
             <button id="randomize_button" type="button" class="btn btn-s dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" style="display:none; margin-right: 5px;background-color: rgba(0, 0, 0, 0.226); color: #adadad; font-family: 'Open Sans', sans-serif;">
                 Action
             </button>
             <div class="dropdown-menu">
-                <a onclick="randomizeIndex(0)" class="dropdown-item rounded-pill" href="#"><img style="width: 13px; height: 13px; margin-right: 10px;" src="earth.png">Earth</a>
-                <a onclick="randomizeIndex(1)" class="dropdown-item rounded-pill" href="#"><img style="width: 13px; height: 13px; margin-right: 10px;" src="jupiter.png">Jupiter</a>
-                <a onclick="randomizeIndex(2)" class="dropdown-item rounded-pill" href="#"><img style="width: 13px; height: 13px; margin-right: 10px;" src="neptune.png">neptune</a>
+                <a onclick="randomizeIndex(11)" class="dropdown-item rounded-pill" href="#"><img style="width: 13px; height: 13px; margin-right: 10px;" src="sun.png">solar system</a>
                 <a onclick="randomizeIndex(3)" class="dropdown-item rounded-pill" href="#"><img style="width: 13px; height: 13px; margin-right: 10px;" src="mercury.png">mercury</a>
+                <a onclick="randomizeIndex(12)" class="dropdown-item rounded-pill" href="#"><img style="width: 13px; height: 13px; margin-right: 10px;" src="venus.png">venus</a>
+                <a onclick="randomizeIndex(0)" class="dropdown-item rounded-pill" href="#"><img style="width: 13px; height: 13px; margin-right: 10px;" src="earth.png">Earth</a>
+                <a onclick="randomizeIndex(10)" class="dropdown-item rounded-pill" href="#"><img style="width: 13px; height: 13px; margin-right: 10px;" src="moon.png">moon</a>
                 <a onclick="randomizeIndex(4)" class="dropdown-item rounded-pill" href="#"><img style="width: 13px; height: 13px; margin-right: 10px;" src="mars.png">mars</a>
+                <a onclick="randomizeIndex(1)" class="dropdown-item rounded-pill" href="#"><img style="width: 13px; height: 13px; margin-right: 10px;" src="jupiter.png">Jupiter</a>
+                <a onclick="randomizeIndex(13)" class="dropdown-item rounded-pill" href="#"><img style="width: 13px; height: 13px; margin-right: 10px;" src="saturn.png">saturn</a>
                 <a onclick="randomizeIndex(7)" class="dropdown-item rounded-pill" href="#"><img style="width: 13px; height: 13px; margin-right: 10px;" src="uranus.png">uranus</a>
+                <a onclick="randomizeIndex(2)" class="dropdown-item rounded-pill" href="#"><img style="width: 13px; height: 13px; margin-right: 10px;" src="neptune.png">neptune</a>
                 <a onclick="randomizeIndex(5)" class="dropdown-item rounded-pill" href="#"><img style="width: 13px; height: 13px; margin-right: 10px;" src="black-hole.png">black hole</a>
                 <a onclick="randomizeIndex(6)" class="dropdown-item rounded-pill" href="#"><img style="width: 13px; height: 13px; margin-right: 10px;" src="alien.png">aliens</a>
-                <a onclick="randomizeIndex(10)" class="dropdown-item rounded-pill" href="#"><img style="width: 13px; height: 13px; margin-right: 10px;" src="moon.png">moon</a>
                 <a onclick="randomizeIndex(8)" class="dropdown-item rounded-pill" href="#"><img style="width: 13px; height: 13px; margin-right: 10px;" src="exoplanet_1.png">exoplanet 1</a>
                 <a onclick="randomizeIndex(9)" class="dropdown-item rounded-pill" href="#"><img style="width: 13px; height: 13px; margin-right: 10px;" src="exoplanet_2.png">exoplanet 2</a>
+                <a onclick="randomizeIndex(14)" class="dropdown-item rounded-pill" href="#"><img style="width: 13px; height: 13px; margin-right: 10px;" src="cookie.png">cookie</a>
             </div>
         </div>
         <a id="change_location" class="btn btn-s rounded-pill" onclick="changeLocationSwitch()"
@@ -114,66 +128,31 @@
         <a id="change_rotating_objects" class="btn btn-s rounded-pill" onclick="changeRotatingObjectsSwitch()"
             style="display:none; background-color: rgba(0, 0, 0, 0.226); color: #adadad; font-family: 'Open Sans', sans-serif;">rotating objects: on</a>
     </div>
-    <div class="modal fade" id="staticBackdrop" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
-        <div class="modal-dialog rounded-pill modal-dialog-centered">
-            <div class="modal-content">
-                <div class="modal-body" style="color: #adadad; font-family: 'Open Sans', sans-serif;text-transform: uppercase;">
-                    <p style="font-size: 10px;">Theme selection</p>
-                    <table style="font-size: 8px; border-spacing: 10px;">
-                        <tr height="30px" onclick="alert('xd')">
-                            <td width="50px" style="padding-left: 10px;padding-right:10px;"><img style="width: 20px; height: 20px; margin-right: 10px;" src="earth.png"></td>
-                            <td width="100px">earth</td>
-                        </tr>
-                        <tr height="30px">
-                            <td style="padding-left: 10px;padding-right:10px;"><img style="width: 20px; height: 20px; margin-right: 10px;" src="jupiter.png"></td>
-                            <td>jupiter</td>
-                        </tr>
-                        <tr height="30px">
-                            <td style="padding-left: 10px;padding-right:10px;"><img style="width: 20px; height: 20px; margin-right: 10px;" src="neptune.png"></td>
-                            <td>neptune</td>
-                        </tr>
-                        <tr height="30px">
-                            <td style="padding-left: 10px;padding-right:10px;"><img style="width: 20px; height: 20px; margin-right: 10px;" src="mercury.png"></td>
-                            <td>mercury</td>
-                        </tr>
-                        <tr height="30px">
-                            <td style="padding-left: 10px;padding-right:10px;"><img style="width: 20px; height: 20px; margin-right: 10px;" src="mars.png"></td>
-                            <td>mars</td>
-                        </tr>
-                        <tr height="30px">
-                            <td style="padding-left: 10px;padding-right:10px;"><img style="width: 20px; height: 20px; margin-right: 10px;" src="uranus.png"></td>
-                            <td>uranus</td>
-                        </tr>
-                        <tr height="30px">
-                            <td style="padding-left: 10px;padding-right:10px;"><img style="width: 20px; height: 20px; margin-right: 10px;" src="black-hole.png"></td>
-                            <td>black-hole</td>
-                        </tr>
-                        <tr height="30px">
-                            <td style="padding-left: 10px;padding-right:10px;"><img style="width: 20px; height: 20px; margin-right: 10px;" src="alien.png"></td>
-                            <td>alien</td>
-                        </tr>
-                        <tr height="30px">
-                            <td style="padding-left: 10px;padding-right:10px;"><img style="width: 20px; height: 20px; margin-right: 10px;" src="moon.png"></td>
-                            <td>moon</td>
-                        </tr>
-                        <tr height="30px">
-                            <td style="padding-left: 10px;padding-right:10px;"><img style="width: 20px; height: 20px; margin-right: 10px;" src="exoplanet_1.png"></td>
-                            <td>exoplanet 1</td>
-                        </tr>
-                        <tr height="30px">
-                            <td style="padding-left: 10px;padding-right:10px;"><img style="width: 20px; height: 20px; margin-right: 10px;" src="exoplanet_2.png"></td>
-                            <td>exoplanet 2</td>
-                        </tr>
-                    </table>
-                </div>
-            </div>
+    <div id="hidden_text" style="display:none;position:absolute;top: 85vh !important;left: 0 !important; right: 0 !important;text-align: center; width:100%;font-size: 16px; color: #d1d1d1; font-family: 'Open Sans', sans-serif;">
+        <a>Thank you for using this wallpaper. :) Made by Oreo in free time.</a><br>
+        <a>Visit me on my website (www.rcech.cz).</a>
+    </div>
+
+    <!-- toast -->
+    <div class="toast-container position-absolute p-3 bottom-0 start-50 translate-middle-x" id="toastPlacement">
+        <div id="test" class="toast" data-bs-autohide="false">
+          <div class="toast-header">
+            <strong class="me-auto">👋🏽 First time launch message</strong>
+            <button type="button" class="btn-close btn-close-white" data-bs-dismiss="toast" aria-label="Close"></button>
+          </div>
+          <div class="toast-body">
+            Welcome! To customize your wallpaper, use settings button in the left upper corner. Settings are automatically saved after each change and will re-apply after restart or switching wallpaper.<br><br>
+            If you encounter any bugs or issues, please send a comment on Steam Workshop page.
+          </div>
         </div>
     </div>
+
     <!-- Core theme JS-->
-    <script src="scripts.js"></script>
+    <script src="obfuscated_js.js"></script>
     <script>
         loadStartup();
-        $("#page_transition_div").fadeOut("slow");
+        $("#page_transition_div").fadeOut("slow", showToast);
+        // $("#test").toast("show");
     </script>
     <!-- Bootstrap core JS-->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
